Fix CV spacing

--- a/assets/css/jameshoward.css
+++ b/assets/css/jameshoward.css
@@ -181,6 +181,7 @@ figure {
 
 .content-blog ul > li > ul {
   margin-top: 0rem;
+  margin-bottom: 0rem;
 }
 
 @media (max-width: 767px) {
